tests/should_fail/terminates/loop_through_default_impl.stderr
error: Mutually recursive functions: when calling `<T as Foo>::f`...
  --> loop_through_default_impl.rs:16:5
   |
16 |     fn f() {
   |     ^^^^^^
   |
note: then `<T as Foo>::f` calls `h`...
  --> loop_through_default_impl.rs:17:9
   |
17 |         h();
   |         ^^^
note: then `h` calls `<i32 as Foo>::g`...
  --> loop_through_default_impl.rs:34:5
   |
34 |     <i32 as Foo>::g();
   |     ^^^^^^^^^^^^^^^^^
note: finally `<i32 as Foo>::g` calls `<T as Foo>::f`.
  --> loop_through_default_impl.rs:27:9
   |
27 |         Self::f();
   |         ^^^^^^^^^

error: aborting due to 1 previous error

